# srlconv

./: .env  .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/srlconv/: __init__.py  cli.py  lab.py
src/srlconv/templates/: load_config.j2  srlconv.clab.yaml.j2
