[project]
name = "srlconv"
version = "0.1.0"
description = "Convert Nokia SR Linux configuration between versions and display diffs"
requires-python = ">=3.13"
dependencies = [
    "typer==0.24.1",
    "rich==14.3.3",
    "jinja2==3.1.6",
    "deepdiff==8.6.2",
]

[project.scripts]
srlconv = "srlconv.cli:app"

[dependency-groups]
dev = ["ruff>=0.15.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/srlconv"]
